tests/NormalTests/paczka1/fuzzy1/54925634.err
Error in line 12: FN1nuKTOe S200 20,5
Error in line 14: XmFZM23K3 S6 55,2
Error in line 15: XmFZM23K3 S931 90,4
Error in line 17: SpC4dexInal S66 89,0
Error in line 24: 3nYmEk71KNe S200 37,2
Error in line 31: J58rfS720d S931 69,1
Error in line 29: S66 S200 96,6
